delete unnecessary import
remove all unnecessary `import java.util.stream.Collectors;` when using "toList()"